@@ -35,7 +35,7 @@ Original provenience: DSP-Stone benchmark suite, matrix1_fixed
     one whitespace, closing ')' and ']' are preceded by one whitespace
   - In comma- or colon-separated argument lists, one whitespace is put after
     each comma/colon
-  - Names of functions and global variables all start with a benchmark-specific 
+  - Names of functions and global variables all start with a benchmark-specific
   prefix (here: statemate_) followed by lowercase letter
   - For pointer types, one whitespace is put before the '*'
   - Operators within expressions shall be preceded and followed by one
@@ -51,7 +51,10 @@ Original provenience: DSP-Stone benchmark suite, matrix1_fixed
 - Renamed benchmark: matrix1_fixed -> matrix1
 - Changed prefix in function/variable names (matrix1_fixed -> matrix1)
 - Removed macro definition (#define TYPE int)  and changed 'TYPE' into 'int'
-- Removed macro definition (#define STORAGE_CLASS  register) and changed 'STORAGE_CLASS' 
+- Removed macro definition (#define STORAGE_CLASS  register) and changed 'STORAGE_CLASS'
   into 'register'
 - Declared initialisation value as volatile
 - Added matrix1_return() function and call to this function from matrix1_main()
+
+2016-10-08
+- Added prefix to global matrix names: A -> matrix1_A, etc.
